--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appForm {
+  text-align: center;
+  position: fixed;
+  bottom: 10px;
+  z-index: 1;
+  background-color: rgb(234, 234, 236);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  margin: 20px auto 10px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.formControl {
+  display: flex !important;
+  flex-direction: row !important;
+  width: 90% !important;
+  margin: 0 auto !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input {
+  flex: 1;
+}
+.btn {
+  flex: 0;
 }
